--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/cxk280/1stdibs-test/issues"
   },
-  "homepage": "https://github.com/cxk280/1stdibs-test#readme"
+  "homepage": "https://github.com/cxk280/1stdibs-test#readme",
+  "dependencies": {
+    "mocha": "^3.2.0",
+    "webdriverio": "^4.6.2"
+  }
 }
