--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/cxk280/1stdibs-test#readme",
   "dependencies": {
+    "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "webdriverio": "^4.6.2"
   }
