--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "chai-http": "^3.0.0",
     "mocha": "^3.2.0",
     "webdriverio": "^4.6.2"
+  },
+  "devDependencies": {
+    "wdio-dot-reporter": "0.0.7",
+    "wdio-mocha-framework": "^0.5.8"
   }
 }
