--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "chai-jquery": "^2.0.0",
     "mocha": "^3.2.0",
     "should": "^11.2.0",
     "webdriverio": "^4.6.2"
