--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^4.0.0",
     "mocha": "^3.2.0",
     "should": "^11.2.0",
+    "wdio-phantomjs-service": "^0.2.2",
     "webdriverio": "^4.6.2"
   },
   "devDependencies": {
