--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "chai-http": "^3.0.0",
     "dotenv": "^4.0.0",
     "mocha": "^3.2.0",
-    "should": "^11.2.0",
+    "should": "^11.2.1",
+    "wdio-dot-reporter": "0.0.7",
+    "wdio-mocha-framework": "^0.5.9",
     "wdio-phantomjs-service": "^0.2.2",
     "webdriverio": "^4.6.2"
   },
